# themex

./: Cargo.toml  README.md  todo.md
data/: catppuccin_mocha.json  catppuccin_mocha.lua  catppuccin_mocha_copy_for_delete.json  catppuccin_mocha_current_theme.lua  catppuccin_mocha_current_theme_hex.lua  catppuccin_mocha_current_theme_not_have_empty.lua  catppuccin_mocha_current_theme_not_have_empty_hex.lua  catppuccin_mocha_themex_generate.lua  latte.json  latte.lua
src/: lib.rs  main.rs
src/converter/: color.rs  lua_gen.rs  mapping.rs  mod.rs  vim_gen.rs
src/types/: mod.rs  semantic.rs  token.rs
src/utils/: mod.rs
tests/: test.rs
tests/data/: test_catppuccin.json  test_eva.json
