[package]
name = "themex"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.5.0"
toml = "0.7"

log = "0.4"
env_logger = "0.10"

[profile.dev]
debug = 2
opt-level = 0
